--- a/style.css
+++ b/style.css
@@ -1,30 +1,81 @@
-nav {
-    display: flex;
-    justify-content: space-between;
+header{
+    width: 100%;
+    padding: 5px 10px;    
 }
-nav ul{
-    display: flex;
+nav{
+    display: flex; 
+    justify-content: space-between;  
+    align-items: center;
+    
+    
 }
-ul li {
+.nav_logo{
+    width: 270px;
+    display: flex;
+    align-items: center;
+    
+    
+}
+.nav_logo img{
+    width:56px;
+    height: 48px;
+    margin-right: 15px;
+    
+}
+.nav_logo h1{
+    margin: 0px;
+}
+.nav_logo h1 span{
+    color: #FF5400;
+    margin-left:10px;
+}
+.nav_list{
+    display: flex;   
+    align-items: center;   
+}
+.nav_list li{
     list-style: none;
-    padding: 40px;
-
+    margin-right: 44px;
+    font-size: 18px;
 }
-ul li a{
+.nav_list li a{
     text-decoration: none;
-}
-  nav-title{             
-    font-size: 500px;
-  }
- 
-  
-  .banner-img{
-   margin-left: 25px;
-border-radius: 16px;
-    background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%);
-  }
-.header-content{
-    height: 70px;
+    color: #424247;
 }
 
 
+
+
+/* Responsive Code */
+
+@media screen and (max-width:576px) {
+header{
+    padding: 0px;
+}
+    nav{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       
+    }
+    .nav_logo{
+        justify-content: center;
+    }
+    .nav_logo img{
+        width: 45px;
+        height: 38px;
+    }
+    .nav_logo h1{
+        font-size: 20px;
+    }
+    .nav_list{
+        justify-content: center;
+        align-items: center;
+       
+    }
+   .nav_list li{
+    margin-right: 15px;
+    font-size: 16px;
+   }
+    
+}
